Deliverable_02/ParserProject02Parser.py
# Generated from ParserProject02.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ParserProject02Parser ( Parser ):

    grammarFileName = "ParserProject02.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':'", "'='", "'+='", "'-='", "'*='", 
                     "'/='", "'-'", "'+'", "'*'", "'/'", "'%'", "'>'", "'<'", 
                     "'>='", "'<='", "'=='", "'!='", "'('", "')'", "'['", 
                     "','", "']'", "'if'", "'elif'", "'else'", "'True'", 
                     "'False'", "'and'", "'or'", "'not'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "IF", "ELIF", 
                      "ELSE", "TRUE", "FALSE", "AND", "OR", "NOT", "NUMBER", 
                      "STRING", "IDENT", "NL", "WS" ]

    RULE_prog = 0
    RULE_stmt = 1
    RULE_block = 2
    RULE_if_stmt = 3
    RULE_simpleAssign = 4
    RULE_augAssign = 5
    RULE_augOp = 6
    RULE_expr = 7
    RULE_primary = 8
    RULE_listLiteral = 9
    RULE_literal = 10
    RULE_boolean_val = 11

    ruleNames =  [ "prog", "stmt", "block", "if_stmt", "simpleAssign", "augAssign", 
                   "augOp", "expr", "primary", "listLiteral", "literal", 
                   "boolean_val" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    IF=23
    ELIF=24
    ELSE=25
    TRUE=26
    FALSE=27
    AND=28
    OR=29
    NOT=30
    NUMBER=31
    STRING=32
    IDENT=33
    NL=34
    WS=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ParserProject02Parser.EOF, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(ParserProject02Parser.NL)
            else:
                return self.getToken(ParserProject02Parser.NL, i)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ParserProject02Parser.StmtContext)
            else:
                return self.getTypedRuleContext(ParserProject02Parser.StmtContext,i)


        def getRuleIndex(self):
            return ParserProject02Parser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = ParserProject02Parser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 24
                    self.match(ParserProject02Parser.NL) 
                self.state = 29
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 38
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 30
                    self.stmt()
                    self.state = 32 
                    self._errHandler.sync(self)
                    _alt = 1
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt == 1:
                            self.state = 31
                            self.match(ParserProject02Parser.NL)

                        else:
                            raise NoViableAltException(self)
                        self.state = 34 
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
             
                self.state = 40
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 42
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==23 or _la==33:
                self.state = 41
                self.stmt()


            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==34:
                self.state = 44
                self.match(ParserProject02Parser.NL)
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 50
            self.match(ParserProject02Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ParserProject02Parser.RULE_stmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AugAssignStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ParserProject02Parser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def augAssign(self):
            return self.getTypedRuleContext(ParserProject02Parser.AugAssignContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAugAssignStmt" ):
                listener.enterAugAssignStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAugAssignStmt" ):
                listener.exitAugAssignStmt(self)


    class AssignStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ParserProject02Parser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def simpleAssign(self):
            return self.getTypedRuleContext(ParserProject02Parser.SimpleAssignContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignStmt" ):
                listener.enterAssignStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignStmt" ):
                listener.exitAssignStmt(self)


    class IfLogicStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ParserProject02Parser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def if_stmt(self):
            return self.getTypedRuleContext(ParserProject02Parser.If_stmtContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfLogicStmt" ):
                listener.enterIfLogicStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfLogicStmt" ):
                listener.exitIfLogicStmt(self)



    def stmt(self):

        localctx = ParserProject02Parser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        try:
            self.state = 55
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                localctx = ParserProject02Parser.AssignStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 52
                self.simpleAssign()
                pass

            elif la_ == 2:
                localctx = ParserProject02Parser.AugAssignStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self.augAssign()
                pass

            elif la_ == 3:
                localctx = ParserProject02Parser.IfLogicStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 54
                self.if_stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ParserProject02Parser.StmtContext)
            else:
                return self.getTypedRuleContext(ParserProject02Parser.StmtContext,i)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(ParserProject02Parser.NL)
            else:
                return self.getToken(ParserProject02Parser.NL, i)

        def getRuleIndex(self):
            return ParserProject02Parser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = ParserProject02Parser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.stmt()
            self.state = 66
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 59 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 58
                        self.match(ParserProject02Parser.NL)
                        self.state = 61 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==34):
                            break

                    self.state = 63
                    self.stmt() 
                self.state = 68
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

            self.state = 72
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 69
                    self.match(ParserProject02Parser.NL) 
                self.state = 74
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(ParserProject02Parser.IF, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ParserProject02Parser.ExprContext)
            else:
                return self.getTypedRuleContext(ParserProject02Parser.ExprContext,i)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(ParserProject02Parser.NL)
            else:
                return self.getToken(ParserProject02Parser.NL, i)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ParserProject02Parser.BlockContext)
            else:
                return self.getTypedRuleContext(ParserProject02Parser.BlockContext,i)


        def ELIF(self, i:int=None):
            if i is None:
                return self.getTokens(ParserProject02Parser.ELIF)
            else:
                return self.getToken(ParserProject02Parser.ELIF, i)

        def ELSE(self):
            return self.getToken(ParserProject02Parser.ELSE, 0)

        def getRuleIndex(self):
            return ParserProject02Parser.RULE_if_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_stmt" ):
                listener.enterIf_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_stmt" ):
                listener.exitIf_stmt(self)




    def if_stmt(self):

        localctx = ParserProject02Parser.If_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_if_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(ParserProject02Parser.IF)
            self.state = 76
            self.expr(0)
            self.state = 77
            self.match(ParserProject02Parser.T__0)
            self.state = 78
            self.match(ParserProject02Parser.NL)
            self.state = 79
            self.block()
            self.state = 88
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 80
                    self.match(ParserProject02Parser.ELIF)
                    self.state = 81
                    self.expr(0)
                    self.state = 82
                    self.match(ParserProject02Parser.T__0)
                    self.state = 83
                    self.match(ParserProject02Parser.NL)
                    self.state = 84
                    self.block() 
                self.state = 90
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

            self.state = 95
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 91
                self.match(ParserProject02Parser.ELSE)
                self.state = 92
                self.match(ParserProject02Parser.T__0)
                self.state = 93
                self.match(ParserProject02Parser.NL)
                self.state = 94
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SimpleAssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(ParserProject02Parser.IDENT, 0)

        def expr(self):
            return self.getTypedRuleContext(ParserProject02Parser.ExprContext,0)


        def getRuleIndex(self):
            return ParserProject02Parser.RULE_simpleAssign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimpleAssign" ):
                listener.enterSimpleAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimpleAssign" ):
                listener.exitSimpleAssign(self)




    def simpleAssign(self):

        localctx = ParserProject02Parser.SimpleAssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_simpleAssign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(ParserProject02Parser.IDENT)
            self.state = 98
            self.match(ParserProject02Parser.T__1)
            self.state = 99
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AugAssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(ParserProject02Parser.IDENT, 0)

        def augOp(self):
            return self.getTypedRuleContext(ParserProject02Parser.AugOpContext,0)


        def expr(self):
            return self.getTypedRuleContext(ParserProject02Parser.ExprContext,0)


        def getRuleIndex(self):
            return ParserProject02Parser.RULE_augAssign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAugAssign" ):
                listener.enterAugAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAugAssign" ):
                listener.exitAugAssign(self)




    def augAssign(self):

        localctx = ParserProject02Parser.AugAssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_augAssign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(ParserProject02Parser.IDENT)
            self.state = 102
            self.augOp()
            self.state = 103
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AugOpContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ParserProject02Parser.RULE_augOp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAugOp" ):
                listener.enterAugOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAugOp" ):
                listener.exitAugOp(self)




    def augOp(self):

        localctx = ParserProject02Parser.AugOpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_augOp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 120) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ParserProject02Parser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class MulDivModContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ParserProject02Parser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ParserProject02Parser.ExprContext)
            else:
                return self.getTypedRuleContext(ParserProject02Parser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMulDivMod" ):
                listener.enterMulDivMod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMulDivMod" ):
                listener.exitMulDivMod(self)


    class AddSubContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ParserProject02Parser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ParserProject02Parser.ExprContext)
            else:
                return self.getTypedRuleContext(ParserProject02Parser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddSub" ):
                listener.enterAddSub(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddSub" ):
                listener.exitAddSub(self)


    class ComparisonContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ParserProject02Parser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ParserProject02Parser.ExprContext)
            else:
                return self.getTypedRuleContext(ParserProject02Parser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparison" ):
                listener.enterComparison(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparison" ):
                listener.exitComparison(self)


    class AndLogicContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ParserProject02Parser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ParserProject02Parser.ExprContext)
            else:
                return self.getTypedRuleContext(ParserProject02Parser.ExprContext,i)

        def AND(self):
            return self.getToken(ParserProject02Parser.AND, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAndLogic" ):
                listener.enterAndLogic(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAndLogic" ):
                listener.exitAndLogic(self)


    class UnaryPlusContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ParserProject02Parser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(ParserProject02Parser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnaryPlus" ):
                listener.enterUnaryPlus(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnaryPlus" ):
                listener.exitUnaryPlus(self)


    class UnaryMinusContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ParserProject02Parser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(ParserProject02Parser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnaryMinus" ):
                listener.enterUnaryMinus(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnaryMinus" ):
                listener.exitUnaryMinus(self)


    class OrLogicContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ParserProject02Parser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ParserProject02Parser.ExprContext)
            else:
                return self.getTypedRuleContext(ParserProject02Parser.ExprContext,i)

        def OR(self):
            return self.getToken(ParserProject02Parser.OR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOrLogic" ):
                listener.enterOrLogic(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOrLogic" ):
                listener.exitOrLogic(self)


    class AtomContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ParserProject02Parser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def primary(self):
            return self.getTypedRuleContext(ParserProject02Parser.PrimaryContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom" ):
                listener.enterAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom" ):
                listener.exitAtom(self)


    class NotLogicContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ParserProject02Parser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NOT(self):
            return self.getToken(ParserProject02Parser.NOT, 0)
        def expr(self):
            return self.getTypedRuleContext(ParserProject02Parser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNotLogic" ):
                listener.enterNotLogic(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNotLogic" ):
                listener.exitNotLogic(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ParserProject02Parser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                localctx = ParserProject02Parser.UnaryMinusContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 108
                self.match(ParserProject02Parser.T__6)
                self.state = 109
                self.expr(9)
                pass
            elif token in [8]:
                localctx = ParserProject02Parser.UnaryPlusContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 110
                self.match(ParserProject02Parser.T__7)
                self.state = 111
                self.expr(8)
                pass
            elif token in [30]:
                localctx = ParserProject02Parser.NotLogicContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 112
                self.match(ParserProject02Parser.NOT)
                self.state = 113
                self.expr(4)
                pass
            elif token in [18, 20, 26, 27, 31, 32, 33]:
                localctx = ParserProject02Parser.AtomContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 114
                self.primary()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 134
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 132
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
                    if la_ == 1:
                        localctx = ParserProject02Parser.MulDivModContext(self, ParserProject02Parser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 117
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 118
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 3584) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 119
                        self.expr(8)
                        pass

                    elif la_ == 2:
                        localctx = ParserProject02Parser.AddSubContext(self, ParserProject02Parser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 120
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 121
                        _la = self._input.LA(1)
                        if not(_la==7 or _la==8):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 122
                        self.expr(7)
                        pass

                    elif la_ == 3:
                        localctx = ParserProject02Parser.ComparisonContext(self, ParserProject02Parser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 123
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 124
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 258048) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 125
                        self.expr(6)
                        pass

                    elif la_ == 4:
                        localctx = ParserProject02Parser.AndLogicContext(self, ParserProject02Parser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 126
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 127
                        self.match(ParserProject02Parser.AND)
                        self.state = 128
                        self.expr(4)
                        pass

                    elif la_ == 5:
                        localctx = ParserProject02Parser.OrLogicContext(self, ParserProject02Parser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 129
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 130
                        self.match(ParserProject02Parser.OR)
                        self.state = 131
                        self.expr(3)
                        pass

             
                self.state = 136
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class PrimaryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(ParserProject02Parser.LiteralContext,0)


        def listLiteral(self):
            return self.getTypedRuleContext(ParserProject02Parser.ListLiteralContext,0)


        def IDENT(self):
            return self.getToken(ParserProject02Parser.IDENT, 0)

        def expr(self):
            return self.getTypedRuleContext(ParserProject02Parser.ExprContext,0)


        def getRuleIndex(self):
            return ParserProject02Parser.RULE_primary

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimary" ):
